--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -191,21 +191,22 @@ jobs:
             b2_cxxstd: "03,11"
             b2_toolset: "gcc-8"
             b2_defines: "define=BOOST_NO_STRESS_TEST=1"
-          - name: "COMMENT=big-endian B2_CXXSTD=03 B2_TOOLSET=gc Job 16"
-            buildtype: "b5847f804b-682d656ff9"
-            packages: "binutils-gold gdb libc6-dbg qemu-user-static"
-            packages_to_remove: ""
-            os: "ubuntu-16.04"
-            cxx: "g++"
-            sources: ""
-            llvm_os: ""
-            llvm_ver: ""
-            comment: "big-endian"
-            b2_cxxstd: "03"
-            b2_toolset: "gcc"
-            b2_defines: "define=BOOST_NO_STRESS_TEST=1"
-            bdde_os: "red"
-            bdde_arch: "ppc64"
+# 
+#           - name: "COMMENT=big-endian B2_CXXSTD=03 B2_TOOLSET=gc Job 16"
+#             buildtype: "b5847f804b-682d656ff9"
+#             packages: "binutils-gold gdb libc6-dbg qemu-user-static"
+#             packages_to_remove: ""
+#             os: "ubuntu-16.04"
+#             cxx: "g++"
+#             sources: ""
+#             llvm_os: ""
+#             llvm_ver: ""
+#             comment: "big-endian"
+#             b2_cxxstd: "03"
+#             b2_toolset: "gcc"
+#             b2_defines: "define=BOOST_NO_STRESS_TEST=1"
+#             bdde_os: "red"
+#             bdde_arch: "ppc64"
           - name: "COMMENT=asan B2_VARIANT=variant=debug B2_TOOL Job 17"
             buildtype: "boost"
             packages: "g++-8"
@@ -318,13 +319,13 @@ jobs:
           echo '==================================> SETUP'
           if [ -n "$GHA_CONTAINER" ]; then
             # if running in a container
-            apt-get -o Acquire::Retries=3 update && DEBIAN_FRONTEND=noninteractive apt-get -y install tzdata && apt-get -o Acquire::Retries=3 install -y sudo software-properties-common wget curl apt-transport-https make apt-file sudo unzip libssl-dev build-essential autotools-dev autoconf automake g++ libc++-helpers python python-pip ruby cpio gcc-multilib g++-multilib pkgconf python3 python3-pip ccache libpython-dev
-            apt-add-repository ppa:git-core/ppa
-            apt-get -o Acquire::Retries=3 update && apt-get -o Acquire::Retries=3 -y install git
-            python -m pip install --upgrade pip==20.3.4
-            /usr/local/bin/pip install cmake
+            sudo apt-get -o Acquire::Retries=3 update && DEBIAN_FRONTEND=noninteractive apt-get -y install tzdata && apt-get -o Acquire::Retries=3 install -y sudo software-properties-common wget curl apt-transport-https make apt-file sudo unzip libssl-dev build-essential autotools-dev autoconf automake g++ libc++-helpers python python-pip ruby cpio gcc-multilib g++-multilib pkgconf python3 python3-pip ccache libpython-dev
+            sudo apt-add-repository ppa:git-core/ppa
+            sudo apt-get -o Acquire::Retries=3 update && apt-get -o Acquire::Retries=3 -y install git
+            sudo python -m pip install --upgrade pip==20.3.4
+            sudo /usr/local/bin/pip install cmake
           fi
-          BOOST_CI_ORG=boostorg BOOST_CI_BRANCH=master && wget https://github.com/$BOOST_CI_ORG/boost-ci/archive/$BOOST_CI_BRANCH.tar.gz && tar -xvf $BOOST_CI_BRANCH.tar.gz && mkdir -p .github &&  mv boost-ci-$BOOST_CI_BRANCH .github/boost-ci
+          # BOOST_CI_ORG=boostorg BOOST_CI_BRANCH=master && wget https://github.com/$BOOST_CI_ORG/boost-ci/archive/$BOOST_CI_BRANCH.tar.gz && tar -xvf $BOOST_CI_BRANCH.tar.gz && mkdir -p .github &&  mv boost-ci-$BOOST_CI_BRANCH .github/boost-ci
           echo '==================================> PACKAGES'
           set -ex
           echo "Before package removal or install"
@@ -339,6 +340,7 @@ jobs:
           ls -al /usr/bin/c*
           echo "about to run sudo apt-get purge -y $PACKAGES_TO_REMOVE"
           if [ -n "$PACKAGES_TO_REMOVE" ]; then sudo apt-get purge -y $PACKAGES_TO_REMOVE; fi
+          sudo ln -s /usr/bin/llvm-cov-9 /usr/bin/llvm-cov
           echo "about to run the equivalent of linux-cxx-install.sh"
 
           set -ex
@@ -557,7 +559,7 @@ jobs:
           uname -a
           whoami
           sudo mv /Library/Developer/CommandLineTools /Library/Developer/CommandLineTools.bck
-          BOOST_CI_ORG=boostorg BOOST_CI_BRANCH=master && /usr/local/bin/wget https://github.com/$BOOST_CI_ORG/boost-ci/archive/$BOOST_CI_BRANCH.tar.gz && tar -xvf $BOOST_CI_BRANCH.tar.gz && mkdir -p .github &&  mv boost-ci-$BOOST_CI_BRANCH .github/boost-ci
+          # BOOST_CI_ORG=boostorg BOOST_CI_BRANCH=master && /usr/local/bin/wget https://github.com/$BOOST_CI_ORG/boost-ci/archive/$BOOST_CI_BRANCH.tar.gz && tar -xvf $BOOST_CI_BRANCH.tar.gz && mkdir -p .github &&  mv boost-ci-$BOOST_CI_BRANCH .github/boost-ci
           echo '==================================> PACKAGES'
           echo "the equivalent of osx-cxx-install.sh would run here."
 
